--- a/index.html
+++ b/index.html
@@ -198,11 +198,21 @@
                 <span>60.0s</span>
             </div>
             
-            <!-- Snap Buttons -->
-            <div class="flex justify-around mt-4 pt-4 border-t border-gray-700">
+            <!-- Snap Buttons - NOW FIVE BUTTONS using justify-between -->
+            <div class="flex justify-between mt-4 pt-4 border-t border-gray-700">
                 <label class="inline-flex items-center text-gray-300">
                     <input type="radio" name="snapTime" value="7.00" onchange="snapToTime(this.value)" class="form-radio text-blue-500 h-4 w-4 bg-gray-700 border-gray-600" checked>
                     <span class="ml-2 text-sm font-medium">7s</span>
+                </label>
+                <!-- NEW 12s SNAP -->
+                <label class="inline-flex items-center text-gray-300">
+                    <input type="radio" name="snapTime" value="12.00" onchange="snapToTime(this.value)" class="form-radio text-blue-500 h-4 w-4 bg-gray-700 border-gray-600">
+                    <span class="ml-2 text-sm font-medium">12s</span>
+                </label>
+                <!-- NEW 15s SNAP -->
+                <label class="inline-flex items-center text-gray-300">
+                    <input type="radio" name="snapTime" value="15.00" onchange="snapToTime(this.value)" class="form-radio text-blue-500 h-4 w-4 bg-gray-700 border-gray-600">
+                    <span class="ml-2 text-sm font-medium">15s</span>
                 </label>
                 <label class="inline-flex items-center text-gray-300">
                     <input type="radio" name="snapTime" value="30.00" onchange="snapToTime(this.value)" class="form-radio text-blue-500 h-4 w-4 bg-gray-700 border-gray-600">
